# portfolio-with-api

./: .gitignore  compose.yaml
backend/: Cargo.toml  rust.dockerfile
backend/migrations/: 0001_projects_table.sql  0002_workexp_table.sql  0003_education_table.sql
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/app/: education.tsx  experience.tsx  layout.tsx  page.tsx  project.tsx
frontend/src/app/admin/: ExperienceEdit.tsx  addNewEducation.tsx  addNewExperience.tsx  addNewProject.tsx  dashboard.tsx  page.tsx  s3Config.ts  uploadnew.tsx
