[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.0"
serde_json = "1.0"
log="0.4"
env_logger = "0.10.0"
actix-web = "4.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres"] }